# legal-parser

./: .env.example  .gitignore  README.md  architecture.excalidraw  dir.sh  poetry_cheat_sheet.sh  pyproject.toml  streamlit_app.py  test-parser-functions.ipynb
scripts/: demo_extraction.py  demo_rag.py  inspect_master_clauses.py  validate_extraction.py  verify_dataset.py
src/api/: main.py  models.py
src/api/routers/: extraction.py  rag.py
src/extractors/: extraction_service.py  prompts.py
src/models/: contract.py
src/parsers/: pdf_parser.py
src/rag/: chunker.py  indexer.py  retriever.py
src/utils/: config.py  dataset.py  extraction_config.py  rag_config.py  tokens.py
tests/: test_dataset.py  test_extraction_service.py  test_models.py  test_pdf_parser.py  test_setup.py
